data/derived/comb/progs/unify/prog1725.ml.out
Characters 149-155:
  Printf.printf ("%d\n" addit);
                 ^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
